ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: social-it.com
      http:
        paths:
          - path: /posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: post-srv
                port:
                  number: 3000
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: content-srv
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-srv
                port:
                  number: 4200
